# UDIMTextureImporter3

./: BUILD.md  CMakeLists.txt  GoUDIM.txt  LICENSE  README.md  UDIMTextureImporter3.txt  UDIMTextureImporter3_2022.txt  main.cpp  main.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
src/: loader.cpp  loader.hpp  main.cpp  main.hpp  texture.cpp  texture.hpp  version.rc.in
src/sdk/: readme.txt
